--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,6 +114,11 @@ select {
 select::-ms-expand {
   display: none;
 }
+.dateInput {
+  background: url("../images/date-icon.png") no-repeat;
+  background-position: left 10px center;
+  padding: 10px 20px 10px 35px !important;
+}
 img {
   width: 100%;
   height: 100%;
@@ -2150,7 +2155,7 @@ input[type="file"] {
   color: #aaaaaa;
   background: url("../images/search-icon.svg") no-repeat 7px center;
 }
-.filter-search button {
+.filter-btn {
   background-color: #ff6634;
   border: 1px solid #ff6634;
   width: 100%;
@@ -2158,7 +2163,7 @@ input[type="file"] {
   padding: 10px 15px;
   border-radius: 5px;
 }
-.filter-search button:hover {
+.filter-btn:hover {
   color: #ff6634;
   background-color: #ffffff;
 }
@@ -2273,7 +2278,7 @@ input[type="file"] {
   width: 30px;
 }
 .subcription-page {
-  padding: 60px 15px;
+  padding: 20px 15px;
   text-align: center;
 }
 .subcription-page h3 {
@@ -3546,7 +3551,8 @@ footer p {
   text-align: left;
 }
 
-.menu-icon {
+.menu-icon,
+.dash-menu-icon {
   display: none;
   float: right;
   position: relative;
@@ -3558,7 +3564,11 @@ footer p {
   transition: 0.5s ease-in-out;
   cursor: pointer;
 }
-.menu-icon span {
+.dash-menu-icon {
+  display: block;
+}
+.menu-icon span,
+.dash-menu-icon span {
   display: block;
   position: absolute;
   height: 2px;
@@ -3602,6 +3612,39 @@ footer p {
   width: 0;
   left: 50%;
 }
+
+.dash-menu-icon span:nth-child(1) {
+  top: 2px;
+}
+.dash-menu-icon span:nth-child(2),
+.dash-menu-icon span:nth-child(3) {
+  top: 10px;
+  width: 60%;
+}
+.dash-menu-icon span:nth-child(4) {
+  top: 18px;
+}
+.dash-menu-icon.open span:nth-child(1) {
+  top: 18px;
+  width: 0;
+  left: 50%;
+}
+.dash-menu-icon.open span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+.dash-menu-icon.open span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+}
+.dash-menu-icon.open span:nth-child(4) {
+  top: 18px;
+  width: 0;
+  left: 50%;
+}
+
 .sidebar-icons {
   width: 100vw;
   background-color: #ffffff;
@@ -3616,6 +3659,20 @@ footer p {
 }
 
 /* ########## DASHBOARD SECTION ########## */
+.dash-header {
+  background-color: #ffffff;
+  position: fixed;
+  top: 0;
+  left: 0;
+  padding: 0 20px;
+  border-right: 1px solid #f3f3f3;
+  border-bottom: 1px solid #f3f3f3;
+  height: 65px;
+  width: 280px;
+  line-height: 65px;
+  text-align: center;
+  z-index: 999;
+}
 .dashboard-content {
   border-top: 1px solid #f3f3f3;
 }
@@ -3625,6 +3682,12 @@ footer p {
   top: 65px;
   width: 280px;
   height: 100vh;
+  -webkit-transition: 0.5s ease-in-out;
+  -o-transition: 0.5s ease-in-out;
+  transition: 0.5s ease-in-out;
+}
+.dashboard-sidebar.close {
+  display: none;
 }
 .brand-logo {
   padding: 40px 20px 20px;
@@ -3663,10 +3726,18 @@ footer p {
   color: #6c6c6c;
 }
 .dashboard-main {
+  background-color: #ffffff;
   margin-left: 280px;
   width: calc(100% - 280px);
   padding: 50px;
   position: relative;
+  -webkit-transition: 0.5s ease-in-out;
+  -o-transition: 0.5s ease-in-out;
+  transition: 0.5s ease-in-out;
+}
+.dashboard-main.open {
+  margin-left: 0;
+  width: 100%;
 }
 .dashboard-alert {
   position: relative;
@@ -3684,6 +3755,27 @@ footer p {
   cursor: pointer;
   color: #ff6634;
   font-size: 28px;
+}
+.dash-info {
+  position: relative;
+  margin-bottom: 35px;
+}
+.dash-info-close {
+  position: absolute;
+  top: -30px;
+  right: 0;
+  cursor: pointer;
+  height: 30px;
+  width: 30px;
+  border-radius: 50%;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  background-color: #f3f3f3;
+  font-size: 18px;
+}
+.dash-info:hover .dash-info-close {
+  display: flex;
 }
 .alert-details {
   padding: 0 20px;
@@ -3766,9 +3858,6 @@ footer p {
   padding: 8px 15px;
   border-radius: 5px;
 }
-.recent-reviews {
-  margin: 50px 0;
-}
 .recent-reviews h3,
 .dashboard-main h3 {
   font-family: "Montserrat-Bold";
@@ -3793,9 +3882,6 @@ footer p {
 }
 .dash-review-header > span {
   margin-left: auto;
-}
-.dash-profile {
-  padding: 60px 0;
 }
 .dash-profile-info h3 {
   font-family: "Montserrat-SemiBold";
@@ -3832,24 +3918,18 @@ footer p {
   margin-bottom: 20px;
   font-size: 14px;
 }
-.total-review {
+.total-review .progress {
   background-color: #ffe5dd;
-  display: flex;
-  align-items: center;
-  border-radius: 5px;
   font-family: "Montserrat-SemiBold";
-  margin-bottom: 25px;
-}
-.review-progress {
-  background-color: #ff9573;
-  padding: 15px 25px;
-  color: #ffffff;
-  width: 65%;
-  border-radius: 5px;
-}
-.total-review span {
+  height: 45px;
   color: #6c1b1b;
-  padding: 15px 25px;
+  line-height: 45px;
+}
+.total-review .progress-bar {
+  background-color: #ff9573;
+}
+.total-review .progress span {
+  padding-left: 15px;
 }
 .average-rating {
   display: flex;
@@ -3898,7 +3978,357 @@ footer p {
   color: #8d8d8d;
 }
 /* ########## DASHBOARD SECTION END ########## */
+.animation-element {
+  opacity: 0;
+}
+.animation-element {
+  opacity: 0;
+  -webkit-transition: all 1000ms linear;
+  -o-transition: all 1000ms linear;
+  transition: all 1000ms linear;
+  -webkit-transform: translate3d(-100px, 0px, 0px);
+  -ms-transform: translate(-100px, 0px);
+  transform: translate3d(-100px, 0px, 0px);
+}
+.animation-element.in-view,
+.animation-element.slide-right.in-view,
+.animation-element.slide-up.in-view {
+  opacity: 1;
+  -webkit-transform: translate3d(0px, 0px, 0px);
+  -ms-transform: translate(0px, 0px);
+  transform: translate3d(0px, 0px, 0px);
+}
+.animation-element.slide-right {
+  opacity: 0;
+  -webkit-transition: all 1000ms linear;
+  -o-transition: all 1000ms linear;
+  transition: all 1000ms linear;
+  -webkit-transform: translate3d(100px, 0px, 0px);
+  -ms-transform: translate(100px, 0px);
+  transform: translate3d(100px, 0px, 0px);
+}
+.animation-element.slide-up {
+  opacity: 0;
+  -webkit-transition: all 1000ms linear;
+  -o-transition: all 1000ms linear;
+  transition: all 1000ms linear;
+  -webkit-transform: translate3d(0, 100px, 0px);
+  -ms-transform: translate(0, 100px);
+  transform: translate3d(0, 100px, 0px);
+}
+/* ########## CUSTOMIZED CHECKBOX ########## */
+.checkbox {
+  display: block;
+  position: relative;
+  padding-left: 30px;
+  font-size: 12px;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  margin-bottom: 10px;
+  text-align: left;
+}
+.blab-verification .checkbox {
+  margin: 0;
+  padding-left: 50px;
+  font-family: "Montserrat-SemiBold";
+}
+.blab-verification .select-all.checkbox,
+.blab-verification .deselect-all.checkbox {
+  padding-left: 20px;
+}
+.review-tag .checkbox,
+.payment-option .checkbox {
+  font-size: 14px;
+  color: #000000;
+  font-family: "Montserrat-Medium";
+}
+.checkbox input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 18px;
+  width: 18px;
+  border-radius: 4px;
+  border: 1px solid #d8d8d8;
+}
+.review-tag .checkmark,
+.payment-option .checkmark {
+  height: 20px;
+  width: 20px;
+  border-radius: 10px;
+  border: 2px solid #c4c4c4;
+}
+.checkbox:hover input ~ .checkmark {
+  background-color: #d8d8d8;
+}
+.checkbox input:checked ~ .checkmark {
+  background-color: #ff6634;
+  border: 1px solid #ff6634;
+}
+.review-tag .checkbox input:checked ~ .checkmark,
+.payment-option .checkbox input:checked ~ .checkmark {
+  background-color: #fff;
+  border: 2px solid #ff6634;
+}
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+.checkbox input:checked ~ .checkmark:after {
+  display: block;
+}
+.checkbox .checkmark:after {
+  left: 4px;
+  top: 0;
+  width: 8px;
+  height: 12px;
+  border: solid white;
+  border-width: 0 2px 2px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+.review-tag .checkbox .checkmark:after,
+.payment-option .checkbox .checkmark:after {
+  width: 12px;
+  height: 12px;
+  left: 2px;
+  top: 2px;
+  border-radius: 10px;
+  border: none;
+  background-color: #ff6634;
+}
+/* ########## CUSTOMIZED CHECKBOX END ########## */
+#myBtn {
+  position: fixed;
+  bottom: 40px;
+  right: 20px;
+  background-color: #ff6634;
+  color: #ffffff;
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  font-size: 36px;
+  align-items: center;
+  justify-content: center;
+}
+.apexcharts-legend-series {
+  display: flex;
+  flex-direction: column;
+}
+.apexcharts-legend-marker {
+  margin-bottom: 5px;
+}
+#breakdownByCat {
+  width: 100%;
+}
+.compare-form {
+  border: 1px solid #f8f8f8;
+  padding: 15px 20px;
+  border-radius: 5px;
+}
+.compare-form input {
+  width: 40%;
+  padding: 10px 15px;
+  border: 1px solid #e7e7e7;
+  border-radius: 5px;
+  margin-right: 10px;
+}
+.compare-form button {
+  background-color: #ff6634;
+  border: 1px solid #ff6634;
+  color: #ffffff;
+  padding: 10px 25px;
+  border-radius: 5px;
+}
+.compare-result {
+  border: 1px solid #e8e8e8;
+  border-radius: 5px;
+}
+.compare-result h5 {
+  padding: 15px 20px;
+  font-family: "Montserrat-SemiBold";
+  color: #000000;
+  font-size: 14px;
+  border-bottom: 1px solid #f1f1f1;
+}
+.result-body {
+  padding: 20px;
+}
+.dashboard-main > h5 {
+  font-family: "Montserrat-SemiBold";
+  margin-top: 20px;
+}
+.average-reactions li {
+  display: flex;
+  padding: 10px 15px;
+  border-bottom: 1px solid #fafafa;
+}
+.average-reactions li img {
+  width: 40px;
+  height: 40px;
+  margin-right: 15px;
+}
+.reaction,
+.reaction-2 {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+.reaction p,
+.reaction-2 p {
+  font-family: "Montserrat-SemiBold";
+  margin: 0;
+}
+.reaction-2 p {
+  color: #ff6634;
+}
+.reaction p span {
+  display: block;
+  color: #303030;
+}
+.reaction-2 p span {
+  display: block;
+  color: #000000;
+}
+.h100 {
+  height: 100%;
+}
+.interactions .progress {
+  height: 6px;
+}
+.interactions .progress-bar {
+  background-color: #ff6634;
+  border-radius: 5px;
+}
+.interactions li {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+.interactions li .progress {
+  display: inline-flex;
+  width: calc(100% - 150px);
+}
+.interactions li p {
+  width: 80px;
+  color: #000000;
+  font-family: "Montserrat-SemiBold";
+}
+.interactions li span {
+  font-family: "Montserrat-SemiBold";
+  color: #ff6634;
+}
+.minority-group > h5 {
+  font-family: "Montserrat-SemiBold";
+  margin-top: 20px;
+}
+.group-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.group-filter {
+  display: flex;
+  align-items: center;
+}
+.group-filter p {
+  font-family: "Montserrat-SemiBold";
+  color: #000000;
+  margin-right: 15px;
+}
+.group-filter input,
+.group-filter select {
+  border: 1px solid #f0f0f0;
+  border-radius: 5px;
+  padding: 10px 20px;
+  width: 180px;
+  margin-left: 10px;
+}
+.cat-interaction li p {
+  color: #000000;
+  font-family: "Montserrat-SemiBold";
+}
+.cat-interaction li .blab-icons {
+  margin-top: 0;
+}
+.cat-interaction li {
+  padding: 5px 10px;
+}
+.cat-interaction li .blab-icons li span {
+  color: #ff6634;
+  font-family: "Montserrat-SemiBold";
+}
 @media screen and (max-width: 991px) {
+  .dash-header {
+    padding: 0 10px;
+    height: 65px;
+    width: 100%;
+    text-align: left;
+  }
+  .dashboard-sidebar {
+    display: none;
+    border: none;
+    position: fixed;
+    background-color: #ffffff;
+    top: 65px;
+    width: 100%;
+    height: auto;
+    z-index: 9999;
+  }
+  .dashboard-sidebar.close {
+    display: block;
+  }
+  .alert-icon {
+    display: none;
+  }
+  .alert-details {
+    padding: 0;
+  }
+  .brand-logo {
+    padding: 20px 10px 10px;
+  }
+  .brand-logo img {
+    width: 80px;
+    height: 80px;
+  }
+  .dashboard-main {
+    margin-left: 0;
+    width: 100%;
+    padding: 30px 15px;
+  }
+  .compare-form input {
+    width: 100%;
+    margin-right: 0px;
+    margin-bottom: 15px;
+  }
+  .compare-form button {
+    width: 100%;
+  }
+  .result-body {
+    padding: 0px;
+  }
+  .review-progress {
+    padding: 10px;
+  }
+  .info-box-3 {
+    padding: 10px;
+  }
+  .total-review span {
+    padding: 10px;
+  }
   .fixed {
     position: relative;
     bottom: 0;
@@ -4096,149 +4526,36 @@ footer p {
   .sm-hidden {
     display: none !important;
   }
-}
-.animation-element {
-  opacity: 0;
-}
-.animation-element {
-  opacity: 0;
-  -webkit-transition: all 1000ms linear;
-  -o-transition: all 1000ms linear;
-  transition: all 1000ms linear;
-  -webkit-transform: translate3d(-100px, 0px, 0px);
-  -ms-transform: translate(-100px, 0px);
-  transform: translate3d(-100px, 0px, 0px);
-}
-.animation-element.in-view,
-.animation-element.slide-right.in-view,
-.animation-element.slide-up.in-view {
-  opacity: 1;
-  -webkit-transform: translate3d(0px, 0px, 0px);
-  -ms-transform: translate(0px, 0px);
-  transform: translate3d(0px, 0px, 0px);
-}
-.animation-element.slide-right {
-  opacity: 0;
-  -webkit-transition: all 1000ms linear;
-  -o-transition: all 1000ms linear;
-  transition: all 1000ms linear;
-  -webkit-transform: translate3d(100px, 0px, 0px);
-  -ms-transform: translate(100px, 0px);
-  transform: translate3d(100px, 0px, 0px);
-}
-.animation-element.slide-up {
-  opacity: 0;
-  -webkit-transition: all 1000ms linear;
-  -o-transition: all 1000ms linear;
-  transition: all 1000ms linear;
-  -webkit-transform: translate3d(0, 100px, 0px);
-  -ms-transform: translate(0, 100px);
-  transform: translate3d(0, 100px, 0px);
-}
-/* ########## CUSTOMIZED CHECKBOX ########## */
-.checkbox {
-  display: block;
-  position: relative;
-  padding-left: 30px;
-  font-size: 12px;
-  cursor: pointer;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  margin-bottom: 10px;
-  text-align: left;
-}
-.blab-verification .checkbox {
-  margin: 0;
-  padding-left: 50px;
-  font-family: "Montserrat-SemiBold";
-}
-.blab-verification .select-all.checkbox,
-.blab-verification .deselect-all.checkbox {
-  padding-left: 20px;
-}
-.review-tag .checkbox,
-.payment-option .checkbox {
-  font-size: 14px;
-  color: #000000;
-  font-family: "Montserrat-Medium";
-}
-.checkbox input {
-  position: absolute;
-  opacity: 0;
-  cursor: pointer;
-  height: 0;
-  width: 0;
-}
-.checkmark {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 18px;
-  width: 18px;
-  border-radius: 4px;
-  border: 1px solid #d8d8d8;
-}
-.review-tag .checkmark,
-.payment-option .checkmark {
-  height: 20px;
-  width: 20px;
-  border-radius: 10px;
-  border: 2px solid #c4c4c4;
-}
-.checkbox:hover input ~ .checkmark {
-  background-color: #d8d8d8;
-}
-.checkbox input:checked ~ .checkmark {
-  background-color: #ff6634;
-  border: 1px solid #ff6634;
-}
-.review-tag .checkbox input:checked ~ .checkmark,
-.payment-option .checkbox input:checked ~ .checkmark {
-  background-color: #fff;
-  border: 2px solid #ff6634;
-}
-.checkmark:after {
-  content: "";
-  position: absolute;
-  display: none;
-}
-.checkbox input:checked ~ .checkmark:after {
-  display: block;
-}
-.checkbox .checkmark:after {
-  left: 4px;
-  top: 0;
-  width: 8px;
-  height: 12px;
-  border: solid white;
-  border-width: 0 2px 2px 0;
-  -webkit-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  transform: rotate(45deg);
-}
-.review-tag .checkbox .checkmark:after,
-.payment-option .checkbox .checkmark:after {
-  width: 12px;
-  height: 12px;
-  left: 2px;
-  top: 2px;
-  border-radius: 10px;
-  border: none;
-  background-color: #ff6634;
-}
-/* ########## CUSTOMIZED CHECKBOX END ########## */
-#myBtn {
-  position: fixed;
-  bottom: 40px;
-  right: 20px;
-  background-color: #ff6634;
-  color: #ffffff;
-  height: 40px;
-  width: 40px;
-  border-radius: 50%;
-  font-size: 36px;
-  align-items: center;
-  justify-content: center;
+  .average-rating {
+    display: flex;
+    align-items: flex-end;
+  }
+  .average-rating img {
+    height: 25px;
+    width: 25px;
+  }
+  .average-rating h2 {
+    font-size: 18px;
+    margin-left: 10px;
+  }
+  .average-rating p {
+    margin-left: 10px;
+  }
+  .row-flex .col-lg-4 {
+    margin-bottom: 25px;
+  }
+  .by-emojis li {
+    padding: 5px 10px;
+  }
+  .group-header,
+  .group-filter {
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+  }
+  .group-filter input,
+  .group-filter select {
+    width: 100%;
+    margin: 0 0 10px;
+  }
 }
