Landing page reworked

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -131,313 +131,6 @@ img {
 .gx-lg-5 {
   --bs-gutter-x: 5rem;
 }
-/* ########## Advert Screen ########## */
-.advert-hero {
-  background: rgba(255, 102, 52, 0.13) url("../images/advert-hero.svg")
-    no-repeat;
-  background-size: cover;
-  padding: 30px 150px;
-  height: 700px;
-}
-.ad-logo {
-  width: 120px;
-  margin: 0 auto 30px;
-}
-.advert-hero > p {
-  width: 50%;
-  margin: 0 auto 90px;
-  text-align: center;
-  color: #3d1d13;
-  font-weight: 600;
-  font-size: 16px;
-}
-.ad-video {
-  position: relative;
-  padding-bottom: 56.25%;
-  height: 0;
-}
-.ad-video iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border-radius: 10px;
-}
-.advert-hero .col-lg-6 {
-  position: relative;
-}
-.get-started {
-  position: absolute;
-  width: 80%;
-  margin-left: 20%;
-  box-shadow: 0 4px 11px 5px rgba(239, 239, 239, 0.25);
-}
-.get-started .header {
-  padding: 15px 50px;
-  background-color: #ff6634;
-  color: #ffffff;
-  font-family: "Montserrat-Medium";
-  font-size: 18px;
-}
-.get-started .body {
-  background-color: #ffffff;
-  padding: 30px 50px;
-}
-.get-started form {
-  margin-top: 35px;
-}
-.get-started label {
-  font-family: "Montserrat-Medium";
-  display: block;
-  color: #2f2f2f;
-  margin-bottom: 5px;
-}
-.get-started input,
-.get-started select {
-  background-color: #ededed;
-  font-family: "Montserrat-SemiBold";
-  border: none;
-  width: 100%;
-  padding: 15px 30px;
-  border-radius: 5px;
-  color: #a3a3a3;
-}
-.get-started button,
-.ad-footer button {
-  width: 100%;
-  padding: 20px;
-  border-radius: 5px;
-  background-color: #ff6634;
-  color: #ffffff;
-  margin: 20px 0 40px;
-}
-.advert-hero-footer {
-  background-color: #3d1d13;
-  padding: 30px 150px;
-}
-.ad-quote {
-  color: #ffffff;
-  font-size: 13px;
-  margin-bottom: 15px;
-  position: relative;
-}
-.ad-quote::before {
-  position: absolute;
-  top: -10px;
-  left: -40px;
-  content: url("../images/ad-top-quote.png");
-}
-.ad-quote::after {
-  position: absolute;
-  bottom: -10px;
-  right: 0;
-  content: url("../images/ad-bottom-quote.png");
-}
-.ad-quote-user {
-  display: flex;
-  align-items: center;
-}
-.ad-quote-user img {
-  width: 30px;
-  height: 30px;
-  border-radius: 10px;
-}
-.ad-quote-user h6 {
-  margin-left: 10px;
-  font-size: 13px;
-  color: #ff6634;
-}
-.blab-benefit,
-.blab-features {
-  padding: 100px 150px;
-}
-.blab-benefit h3,
-.blab-features h3 {
-  font-family: "Montserrat-SemiBold";
-  color: #000000;
-}
-.blab-benefit h6,
-.blab-features h6 {
-  color: #8d8d8d;
-  font-size: 14px;
-  line-height: 1.5;
-  margin-bottom: 60px;
-}
-.benefit {
-  margin-bottom: 35px;
-}
-.benefit-icon,
-.benefit-data {
-  display: inline-block;
-  vertical-align: top;
-}
-.benefit-icon {
-  height: 80px;
-  width: 80px;
-  border-radius: 50%;
-}
-.benefit-data {
-  width: calc(100% - 95px);
-  margin-left: 10px;
-}
-.benefit-data h5 {
-  color: #000000;
-  font-size: 16px;
-  margin-bottom: 5px;
-}
-.benefit-data p {
-  font-size: 13px;
-}
-.benefit-testimonial-container {
-  padding: 120px 0 0 60px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.benefit-testimonial-container img {
-  margin-right: 15px;
-}
-.benefit-testimonial {
-  padding-left: 45px;
-}
-.benefit-testimonial p {
-  position: relative;
-  margin-bottom: 10px;
-}
-.benefit-testimonial p::before {
-  position: absolute;
-  top: -10px;
-  left: -40px;
-  content: url("../images/top-quote.png");
-}
-.benefit-testimonial p::after {
-  position: absolute;
-  bottom: -10px;
-  right: 0;
-  content: url("../images/bottom-quote.png");
-}
-.benefit-testimonial h5 {
-  color: #000000;
-  font-size: 16px;
-  margin: 0;
-}
-.benefit-testimonial h6 {
-  color: #ff6634;
-  font-size: 12px;
-  margin: 0 !important;
-}
-.find-more {
-  background: url("../images/find-more.png") no-repeat center;
-  background-size: cover;
-  padding: 90px 150px;
-}
-.find-more h5 {
-  font-size: calc(16px + (22 - 16) * ((100vw - 300px) / 1300));
-  color: #ffffff;
-  font-family: "Montserrat-SemiBold";
-  line-height: 1.5;
-}
-.feature {
-  margin-bottom: 35px;
-}
-.feature-img {
-  height: 200px;
-  width: 100%;
-  margin-bottom: 15px;
-}
-.feature-info h6 {
-  color: #000000;
-  margin-bottom: 5px !important;
-}
-.advert-footer {
-  background-color: #f5f5f5;
-  padding: 60px 150px;
-}
-.ad-footer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.ad-footer p {
-  color: #747474;
-  font-family: "Montserrat-SemiBold";
-  font-size: calc(16px + (22 - 16) * ((100vw - 300px) / 1300));
-}
-.ad-footer button {
-  width: 180px;
-  margin: 0;
-}
-@media screen and (max-width: 991px) {
-  .advert-hero {
-    padding: 30px 15px;
-    height: auto;
-    overflow: hidden;
-  }
-  .advert-hero > p {
-    width: 100%;
-    margin: 0 auto 60px;
-  }
-  .get-started {
-    position: relative;
-    width: 100%;
-    margin-left: 0%;
-    margin-top: 30px;
-  }
-  .get-started .header {
-    padding: 15px;
-  }
-  .get-started .body {
-    padding: 15px;
-  }
-  .get-started form {
-    margin-top: 20px;
-  }
-  .get-started button {
-    margin: 10px 0 20px;
-  }
-  .advert-hero-footer {
-    padding: 30px 50px;
-  }
-  .blab-benefit,
-  .blab-features {
-    padding: 40px 15px;
-  }
-  .blab-benefit h6,
-  .blab-features h6 {
-    margin-bottom: 40px;
-  }
-  .benefit-icon {
-    height: 70px;
-    width: 70px;
-  }
-  .benefit-data {
-    width: calc(100% - 85px);
-  }
-  .benefit-testimonial-container {
-    padding: 40px 0 0 0;
-    flex-direction: column;
-  }
-  .benefit-testimonial-container img {
-    margin-right: 0;
-  }
-  .benefit-testimonial {
-    padding: 15px;
-    text-align: center;
-  }
-  .find-more {
-    padding: 30px 15px;
-  }
-  .advert-footer {
-    padding: 30px 15px;
-    text-align: center;
-  }
-  .ad-footer button {
-    padding: 10px;
-    margin-top: 25px;
-  }
-}
-/* ########## Advert Screen End ########## */
 
 /* ########## Business List Screen ########## */
 .header2 {
@@ -1578,6 +1271,8 @@ img {
   font-size: 15px;
   font-family: "Montserrat-Bold";
   margin-bottom: 0;
+  display: flex;
+  align-items: center;
 }
 .blab-info-top h5 .rating,
 .dash-review-header .rating {
@@ -1587,9 +1282,18 @@ img {
   font-size: 13px;
   align-items: flex-end;
 }
+.blab-info-top h5 .rating {
+  display: flex;
+  align-items: center;
+}
 .blab-info-top h5 .rating span,
 .dash-review-header .rating span {
   margin-top: -15px;
+}
+.blab-info-top h5 .rating span {
+  font-size: 11px;
+  margin: 0;
+  margin-top: 5px;
 }
 .blab-info-top > span {
   color: #d4d4d4;
@@ -2747,24 +2451,25 @@ input[type="file"] {
 }
 .hero {
   width: 100%;
+  padding: 0 90px;
   background: #ffebff url("../images/lines.svg") 95% no-repeat;
   color: #000000;
 }
 .hero .b1 {
-  min-height: calc(100vh - 65px);
+  min-height: calc(100vh - 85px);
   position: relative;
   display: flex;
   align-items: center;
-  overflow: hidden;
 }
 .caption {
-  padding-left: 100px;
+  padding-left: 50px;
+  margin-top: -50px;
   position: relative;
 }
 .caption h2 {
   font-family: "Montserrat-Black";
   font-weight: 900;
-  font-size: calc(28px + (52 - 28) * ((100vw - 300px) / 1300));
+  font-size: calc(24px + (48 - 24) * ((100vw - 300px) / 1300));
   line-height: 1.18;
 }
 .caption p {
@@ -2776,8 +2481,8 @@ input[type="file"] {
 }
 .quote {
   position: absolute;
-  bottom: 30px;
-  left: 60px;
+  bottom: 70px;
+  left: 40px;
   max-width: 55%;
   width: fit-content;
   color: #8d8d8d;
@@ -2844,21 +2549,22 @@ input[type="file"] {
   position: absolute;
   bottom: 0;
   right: 0;
-  height: 100%;
-  width: auto;
-  max-width: 100%;
+  height: auto;
+  width: 100%;
 }
 .b1 .review {
   position: absolute;
-  bottom: 5%;
-  left: 0%;
+  bottom: 10%;
+  left: -10%;
   background-color: #ffffff;
   width: 280px;
   margin: 0;
 }
 .b1 .employee-reviews {
-  width: 86px;
-  height: 86px;
+  width: 8vw;
+  height: 8vw;
+  min-height: 60px;
+  min-width: 60px;
   position: absolute;
   right: 8%;
   top: 25%;
@@ -2866,6 +2572,9 @@ input[type="file"] {
   border-radius: 6px;
   padding: 10px 15px;
   text-align: center;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 .b1 .hero-chart {
   position: absolute;
@@ -3245,13 +2954,13 @@ input[type="file"] {
 .b1 .employee-reviews h5 {
   font-family: "Montserrat-Black";
   font-weight: 900;
-  font-size: calc(18px + (32 - 18) * ((100vw - 300px) / 1300));
+  font-size: calc(18px + (42 - 18) * ((100vw - 300px) / 1300));
   color: #ff6634;
   margin: 0;
 }
 .b1 .employee-reviews p {
   color: #6c6c6c;
-  font-size: calc(9px + (12 - 9) * ((100vw - 300px) / 1300));
+  font-size: calc(9px + (14 - 9) * ((100vw - 300px) / 1300));
 }
 .b1 .review-info {
   padding: 15px 20px 0px;
@@ -4363,6 +4072,7 @@ footer p {
   }
   .caption {
     padding: 50px 0;
+    margin-top: 0;
   }
   .quote {
     position: relative;
@@ -4387,17 +4097,13 @@ footer p {
   }
   .hero-img {
     position: relative;
-    width: 110vw;
-    height: auto;
   }
   .b1 .review {
     bottom: 5%;
-    left: 0%;
+    left: -10px;
     width: 130px;
   }
   .b1 .employee-reviews {
-    width: 60px;
-    height: 60px;
     right: 5%;
     padding: 5px;
   }
@@ -4591,4 +4297,16 @@ footer p {
 }
 .refresh-prompt ul li {
   margin-left: -10px;
+}
+.nav-back {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 30px;
+  width: 30px;
+  font-size: 18px;
+  cursor: pointer;
+}
+.nav-back:hover {
+  color: #ff6634;
 }
